--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -29,7 +29,7 @@ body {
     background-color: #086170;
     width: 40%;
     border-style: dashed;
-     max-height: 100%;    
+     max-height: 100em;    
 }
 
 .myphoto {
