--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -29,7 +29,7 @@ body {
     background-color: #086170;
     width: 40%;
     border-style: dashed;
-     max-height: 100%;    
+     max-height: 100em;    
 }
 
 .myphoto {
@@ -132,36 +132,36 @@ body {
 .photoshop{
     margin-right: 1%;
     max-width: 12%;
-    max-height: 100%;
+    max-height: 100em;
  
 }
 .aftereffect{
     margin-right: 1%;
     max-width: 12%;
-    max-height: 100%;
+    max-height: 100em;
 }
 .premiere{
     margin-right: 1%;
     max-width: 12%;
-    max-height: 100%;
+    max-height: 100em;
  
 }
 .final-cut{
     margin-right: 1%;
     max-width: 12%;
-    max-height: 100%;
+    max-height: 100em;
  
 }
 .html{
     margin-right: 1%;
     max-width: 12%;
-    max-height: 100%;
+    max-height: 100em;
  
 }
 .css{
     margin-right: 1%;
     max-width: 12%;
-    max-height: 100%;
+    max-height: 100em;
  
 }
 
