--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -129,7 +129,13 @@ body {
           
 }
 
-.photoshop{
+.logoskill img {
+    max-height: 60px;
+    width: 100%;
+    padding-left: 5px;
+}
+
+/* .photoshop{
     margin-right: 1%;
     width: 12%;
     
@@ -158,7 +164,7 @@ body {
     margin-right: 1%;
     width: 12%;
  
-}
+} */
 
 @media screen and (min-width: 768px) and (max-width: 1023px){
     .container{
@@ -197,7 +203,7 @@ body {
         width: 100%;
                      
     }
-    .photoshop{
+    /* .photoshop{
         margin-right: 1%;
         width: 12%;
         
@@ -208,7 +214,7 @@ body {
         margin-right: 1%;
         width: 12%;
        
-    }
+    } */
 
 }
 /* mobile */
@@ -250,7 +256,7 @@ body {
         padding : 5%
                      
     }
-    .photoshop{
+    /* .photoshop{
         margin-right: 1%;
         width: 12%;
         
@@ -264,5 +270,5 @@ body {
         width: 12%;
         
         
-    }
+    } */
 }
