--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -122,17 +122,18 @@ body {
     width: 50px;
 }
 .logoskill{
-    display: flex;
-    flex-direction: row;
-    justify-content:space-between ;
+    display:-webkit-flex;
+    flex-wrap:wrap ;
+    justify-content:space-around ;
     margin: 20px;
           
 }
 
 .logoskill img {
-    max-height: 60px;
-    width: 100%;
+    height: 60px;
+    width: 60px;
     padding-left: 5px;
+    
 }
 
 /* .photoshop{
@@ -255,6 +256,14 @@ body {
         width: 100%;
         padding : 5%
                      
+    }
+    .logoskill img {
+        height: 60px;
+        width: 60px;
+        padding-left: 5px;
+        display: flex;
+        flex-direction: wrap;
+        justify-content:space-around ;
     }
     /* .photoshop{
         margin-right: 1%;
