--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -257,6 +257,10 @@ body {
         padding : 5%
                      
     }
+    .logoskill{
+        display:flex;
+        flex-direction:row ;
+        justify-content:start ;
     
     
     /* .photoshop{
