--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -33,8 +33,8 @@ body {
 }
 
 .myphoto {
-    height: 90%;
-    width: 90%;   
+    height: 450px;
+    width: 450px;   
     border-radius: 30%;
     margin: 5%;
     padding: 1%;
