--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -181,8 +181,8 @@ body {
      }
 
     .myphoto {
-        height: 40%;
-        width: 40%;   
+        height: 350px;
+        width: 350px;   
         margin: 8% 2%;
         padding: 1%;
                      
