--- a/styleMy-resume.css
+++ b/styleMy-resume.css
@@ -152,7 +152,7 @@ body {
      }
 
     .myphoto {
-         
+        width: 400px;
         margin: 8% 2%;
         padding: 1%;
                      
